gateway.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  KeyName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    Description: Name of the KeyPair used for EC2 instances
    ConstraintDescription: 'Must be the name of an existing EC2 KeyPair.'
  
  LatestAmiId:
    Type : 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
### parameters for gateway loadbalancer
  PrefixNameTag:
    Type: String
    Description: Prefix to be added to resource names
  SecVpcId:
    Type: String
    Description: ID of the security VPC
  SubnetsMap:
    Type: String
    Description: Mapping of subnet names to subnet IDs in the security VPC
  FirewallId:
    Type: String
    Description: ID of the firewall instance
### parameters for panorama
   SubnetId:
    Type: String
  PanoramaPrivateIps:
    Type: List<String>
  PanoramaSecurityGroup:
    Type: String
  PanoramaAmi:
    Type: String
  PanoramaInstanceType:
    Type: String
  SshKeyName:
    Type: String
  PrefixNameTag:
    Type: String
  PanoramaName:
    Type: String
  GlobalTags:
    Type: CommaDelimitedList
### parameters for vm-series
  PanoramaIP:
    Type: String
    Description: "Panorama server IP address"

Resources:
  TransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      Description: Transit Gateway for VPC connectivity
      DefaultRouteTableAssociation: disable
      DefaultRouteTablePropagation: disable

  FromAppbVpcsRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway
      Tags:
        - Key: Name
          Value: from-app-vpcs

  FromSecVpcRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref TransitGateway
      Tags:
        - Key: Name
          Value: from-sec-vpc

  AppbVpcTgwAttachAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties: 
      TransitGatewayAttachmentId: !Ref AppbTgwAttachment
      TransitGatewayRouteTableId: !Ref FromAppbVpcsRouteTable

  AttVpcTgwAttachAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties: 
      TransitGatewayAttachmentId: !Ref AttTgwAttachment
      TransitGatewayRouteTableId: !Ref FromAppbVpcsRouteTable

  SecVpcTgwAttachAssociation:
    Type: AWS::EC2::TransitGatewayRouteTableAssociation
    Properties: 
      TransitGatewayAttachmentId: !Ref SecTgwAttachment
      TransitGatewayRouteTableId: !Ref FromSecVpcRouteTable

  FromSecVpcRoute1:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId: !Ref FromSecVpcRouteTable
      DestinationCidrBlock: 10.0.0.0/16
      TransitGatewayAttachmentId: !Ref AppbTgwAttachment

  FromSecVpcRoute2:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId: !Ref FromSecVpcRouteTable
      DestinationCidrBlock: 10.1.0.0/16
      TransitGatewayAttachmentId: !Ref AttTgwAttachment

  FromAppbVpcsRoute1:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId: !Ref FromAppbVpcsRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayAttachmentId: !Ref SecTgwAttachment

  FromAppbVpcsRoute2:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId: !Ref FromAppbVpcsRouteTable
      DestinationCidrBlock: 10.1.0.0/16
      TransitGatewayAttachmentId: !Ref AttTgwAttachment

  FromAppbVpcsRoute3:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      TransitGatewayRouteTableId: !Ref FromAppbVpcsRouteTable
      DestinationCidrBlock: 10.0.0.0/16
      TransitGatewayAttachmentId: !Ref AppbTgwAttachment

  ManagementVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ManagementVPC

  ManagementSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ManagementVpc
      CidrBlock: 10.2.0.0/24
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ManagementSubnet
### gateway loadbalancer
  GWLBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Protocol: GENEVE
      Port: 6081
      VpcId: !Ref SecVpcId
      TargetType: instance
      HealthCheckProtocol: TCP
      HealthCheckPort: 80
      Name: !Sub '${PrefixNameTag}GatewayLoadBalancerTargetGroup'
  
  GWLB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub '${PrefixNameTag}GatewayLoadBalancer'
      Subnets: !Split [',', !Ref SubnetsMap]
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      LoadBalancerType: gateway
      IpAddressType: ipv4
      EnableCrossZoneLoadBalancing: true
      SecurityGroups: [ !Ref FirewallId ]
      Tags:
        - Key: Name
          Value: !Sub '${PrefixNameTag}GatewayLoadBalancer'
  
  GWLBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref GWLBTargetGroup
      LoadBalancerArn: !Ref GWLB
      Port: 6081
      Protocol: GENEVE

  GWLBEndpointService:
    Type: 'AWS::EC2::VPCEndpointService'
    Properties:
      NetworkLoadBalancerArns:
        - !GetAtt GWLB.LoadBalancerArn
      AcceptanceRequired: false
      GatewayLoadBalancerArns:
        - !Ref GWLB

  GWLBEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcId: !Ref SecVpcId
      ServiceName: !GetAtt GWLBEndpointService.ServiceName
      SubnetIds: !Split [',', !Ref SubnetsMap]
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: !GetAtt GWLBEndpointService.ServiceName
            Action: 'ec2:DescribeSecurityGroups'
            Resource: '*'
      Tags:
        - Key: Name
          Value: !Sub '${PrefixNameTag}GatewayLoadBalancerEndpoint'

  PrivateNetworkInterface:
    Type: "AWS::EC2::NetworkInterface"
    Properties:
      SubnetId: !Ref SubnetId
      PrivateIpAddresses: 
        - PrivateIpAddress: !Select [0, !Ref PanoramaPrivateIps]
      SecurityGroupIds: 
        - !Ref PanoramaSecurityGroup
      Tags: 
        - Key: Name
          Value: !Sub "${PrefixNameTag}${PanoramaName}-primary-interface"
        - !Ref GlobalTags
### panorama
  PanoramaInstance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref PanoramaAmi
      InstanceType: !Ref PanoramaInstanceType
      KeyName: !Ref SshKeyName
      NetworkInterfaces: 
        - NetworkInterfaceId: !Ref PrivateNetworkInterface
          DeviceIndex: 0
      Tags: 
        - Key: Name
          Value: !Sub "${PrefixNameTag}${PanoramaName}"
        - !Ref GlobalTags

  ElasticIp:
    Type: "AWS::EC2::EIP"

  ElasticIpAssociation:
    Type: "AWS::EC2::EIPAssociation"
    Properties:
      AllocationId: !GetAtt ElasticIp.AllocationId
      NetworkInterfaceId: !Ref PrivateNetworkInterface

### vm-series
  ElasticIP:
    Type: "AWS::EC2::EIP"

  VMInstance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref SSHKeyName
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref NGFWMgmtENI
          DeviceIndex: 0
        - NetworkInterfaceId: !Ref NGFWDataENI
          DeviceIndex: 1
      UserData:
        Fn::Base64: 
          Fn::Sub: |
            #!/bin/bash
            echo "panorama-server=${PanoramaIP}" >> /opt/pancfg/panorama_bootstrap.cfg
          - PanoramaIP: !Ref PanoramaIP

  NGFWMgmtENI:
    Type: "AWS::EC2::NetworkInterface"
    Properties:
      SubnetId: !Ref MgmtSubnetID
      PrivateIpAddresses: 
        - !Select [0, !CidrSplit !Ref NGFWMgmtSubnetCIDR 256]
      Groups: 
        - !Ref SecurityGroupID
      SourceDestCheck: true

  NGFWDataENI:
    Type: "AWS::EC2::NetworkInterface"
    Properties:
      SubnetId: !Ref DataSubnetID
      PrivateIpAddresses: 
        - !Select [0, !CidrSplit !Ref NGFWDataSubnetCIDR 256]
      Groups: 
        - !Ref SecurityGroupID
      SourceDestCheck: true

Mappings:
  RegionMap:
    us-east-1:
      AMI: "ami-12345678"  # Replace this with the appropriate AMI for your region

### VPC Resources for Application VPC
  
  AppbVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: app-vpc

  AppbInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: app-vpc-igw

  AppbVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AppbVPC
      InternetGatewayId: !Ref AppbInternetGateway

  AppbAppSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppbVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: appb-vpc-app-subnet

  AppbTgwSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppbVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: appb-vpc-tgw-subnet

  AppbGwlbeSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppbVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: appb-vpc-gwlbe-subnet

  AppbAppRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AppbVPC
      Tags:
        - Key: Name
          Value: appb-vpc-app-rt

  AppbGwlbeRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AppbVPC
      Tags:
        - Key: Name
          Value: appb-vpc-gwlbe-rt

  AppbIgwRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AppbVPC
      Tags:
        - Key: Name
          Value: appb-vpc-igw-rt

  AppbAppSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppbAppSubnet
      RouteTableId: !Ref AppbAppRouteTable

  AppbGwlbeSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppbGwlbeSubnet
      RouteTableId: !Ref AppbGwlbeRouteTable

  AppbIgwRouteTableAssociation:
    Type: AWS::EC2::GatewayRouteTableAssociation
    Properties:
      GatewayId: !Ref AppbInternetGateway
      RouteTableId: !Ref AppbIgwRouteTable

  AppbInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppbAppRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AppbInternetGateway

  AppbAttRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - AppbTgwAttachment
    Properties:
      RouteTableId: !Ref AppbAppRouteTable
      DestinationCidrBlock: 10.1.0.0/16
      TransitGatewayId: !Ref TransitGateway

  AppbEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for AppbEC2Instance
      VpcId: !Ref AppbVPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.1.0.0/16
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 10.1.0.0/16
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: appb-vpc-sg

  AppbEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId  # Enter the appropriate AMI ID
      InstanceType: t2.micro  # Enter the desired instance type
      KeyName: !Ref KeyName  #!Join ['', [!FindInMap [KeyPairMap, qwikLABS, KeyNamePrefix], !Ref 'AWS::AccountId']]
      NetworkInterfaces:
        - PrivateIpAddress: 10.0.0.10  # Enter the desired private IP address
          AssociatePublicIpAddress: True
          SubnetId: !Ref AppbAppSubnet
          DeviceIndex: 0
          GroupSet:
            - !Ref AppbEC2SecurityGroup
      Tags:
        - Key: Name
          Value: appb-svr
      UserData:
        Fn::Base64: IyEvYmluL2Jhc2gKCiMgVXBkYXRlIGhvc3RuYW1lIGZvciBiZXR0ZXIgaWRlbnRpZmljYXRpb24Kc3VkbyBob3N0bmFtZSB2dWwtYXBwLXNlcnZlcgoKIyBVcGRhdGluZyB5dW0gcmVwb3NpdG9yaWVzCnN1ZG8geXVtIHVwZGF0ZSAteQoKIyBJbnN0YWxsaW5nIERvY2tlcgpzdWRvIGFtYXpvbi1saW51eC1leHRyYXMgaW5zdGFsbCBkb2NrZXIgLXkKc3VkbyB5dW0gaW5zdGFsbCAteSBkb2NrZXIKCiMgU3RhcnRpbmcgRG9ja2VyCnN1ZG8gc2VydmljZSBkb2NrZXIgc3RhcnQKc3VkbyBzeXN0ZW1jdGwgZW5hYmxlIGRvY2tlcgpzdWRvIHVzZXJtb2QgLWEgLUcgZG9ja2VyIGVjMi11c2VyCnN1ZG8gZG9ja2VyIGluZm8KCiMgRG93bmxv [...]

  AppbTgwAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref AppbVPC
      SubnetIds:
        - !Ref AppbTgwSubnet

### VPC Resources for Attack VPC

  AttVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      Tags:
        - Key: Name
          Value: att-vpc

  AttInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: att-vpc-igw

  AttVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AttVPC
      InternetGatewayId: !Ref AttInternetGateway

  AttAppSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AttVPC
      CidrBlock: 10.1.0.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: att-vpc-app-subnet

  AttTgwSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AttVPC
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: att-vpc-tgw-subnet

  AttGwlbeSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AttVPC
      CidrBlock: 10.1.2.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: att-vpc-gwlbe-subnet

  AttAppRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AttVPC
      Tags:
        - Key: Name
          Value: att-vpc-app-rt

  AttIgwRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AttVPC
      Tags:
        - Key: Name
          Value: att-vpc-igw-rt

  AttGwlbeRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AttVPC
      Tags:
        - Key: Name
          Value: att-vpc-gwlbe-rt

  AttAppSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AttAppSubnet
      RouteTableId: !Ref AttAppRouteTable

  AttGwlbeSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AttGwlbeSubnet
      RouteTableId: !Ref AttGwlbeRouteTable

  AttIgwRouteTableAssociation:
    Type: AWS::EC2::GatewayRouteTableAssociation
    Properties:
      GatewayId: !Ref AttInternetGateway
      RouteTableId: !Ref AttIgwRouteTable

  AttInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AttAppRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AttInternetGateway

  AttVulRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - AttTgwAttachment
    Properties:
      RouteTableId: !Ref AttAppRouteTable
      DestinationCidrBlock: 10.0.0.0/16
      TransitGatewayId: !Ref TransitGateway

  AttEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for AttEC2Instance
      VpcId: !Ref AttVPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 1389
          ToPort: 1389
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 8888
          ToPort: 8888
          CidrIp: 10.0.0.0/16
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: att-vpc-sg

  AttEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId  # Enter the appropriate AMI ID
      InstanceType: t2.micro  # Enter the desired instance type
      KeyName: !Ref KeyName  #!Join ['', [!FindInMap [KeyPairMap, qwikLABS, KeyNamePrefix], !Ref 'AWS::AccountId']]
      NetworkInterfaces:
        - PrivateIpAddress: 10.1.0.10  # Enter the desired private IP address
          AssociatePublicIpAddress: True
          SubnetId: !Ref AttAppSubnet
          DeviceIndex: 0
          GroupSet:
            - !Ref AttEC2SecurityGroup
      Tags:
        - Key: Name
          Value: att-svr
      UserData:
        Fn::Base64: IyEvYmluL2Jhc2gKCiMgVXBkYXRlIGhvc3RuYW1lIGZvciBiZXR0ZXIgaWRlbnRpZmljYXRpb24Kc3VkbyBob3N0bmFtZSBhdHQtYXBwLXNlcnZlcgoKIyBVcGRhdGluZyB5dW0gcmVwb3NpdG9yaWVzCnN1ZG8geXVtIHVwZGF0ZSAteQoKIyBJbnN0YWxsaW5nIERvY2tlcgpzdWRvIGFtYXpvbi1saW51eC1leHRyYXMgaW5zdGFsbCBkb2NrZXIgLXkKc3VkbyB5dW0gaW5zdGFsbCBkb2NrZXIgLXkKCiMgU3RhcnRpbmcgRG9ja2VyCnN1ZG8gc2VydmljZSBkb2NrZXIgc3RhcnQKc3VkbyBzeXN0ZW1jdGwgZW5hYmxlIGRvY2tlcgpzdWRvIHVzZXJtb2QgLWEgLUcgZG9ja2VyIHVidW50dQpzdWRvIGRvY2tlciBpbmZvCgojIERvd25sb2Fk [...]

  AttTgwAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref AttVPC
      SubnetIds:
        - !Ref AttTgwSubnet

### VPC Resources for Security VPC

  SecVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      Tags:
        - Key: Name
          Value: sec-vpc

  SecGwlbeSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SecVPC
      CidrBlock: 10.2.1.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: sec-vpc-gwlbe-subnet

  SecTgwSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SecVPC
      CidrBlock: 10.2.0.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      Tags:
        - Key: Name
          Value: sec-vpc-tgw-subnet

  SecGwlbeRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SecVPC
      Tags:
        - Key: Name
          Value: sec-vpc-gwlbe-rt

  SecTgwRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SecVPC
      Tags:
        - Key: Name
          Value: sec-vpc-tgw-rt

  SecGwlbeSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SecGwlbeSubnet
      RouteTableId: !Ref SecGwlbeRouteTable

  SecTgwSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SecTgwSubnet
      RouteTableId: !Ref SecTgwRouteTable

  SecTgwAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      TransitGatewayId: !Ref TransitGateway
      VpcId: !Ref SecVPC
      SubnetIds:
        - !Ref SecTgwSubnet

  SecVulRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - SecTgwAttachment
    Properties:
      RouteTableId: !Ref SecGwlbeRouteTable
      DestinationCidrBlock: 10.0.0.0/16
      TransitGatewayId: !Ref TransitGateway

  SecAttRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - SecTgwAttachment
    Properties:
      RouteTableId: !Ref SecGwlbeRouteTable
      DestinationCidrBlock: 10.1.0.0/16
      TransitGatewayId: !Ref TransitGateway

### VPC Resources for Management VPC
  
  ManagementVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.3.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ManagementVPC

  ManagementSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ManagementVPC
      CidrBlock: 10.3.0.0/24
      AvailabilityZone: !Select [0, !GetAZs 'us-east-1']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ManagementSubnet

  ManagementInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: mgmt-vpc-igw

  ManagementVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ManagementVPC
      InternetGatewayId: !Ref ManagementInternetGateway

  ManagementRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ManagementVPC
      Tags:
        - Key: Name
          Value: mgmt-vpc-rt

  ManagementSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ManagementSubnet
      RouteTableId: !Ref ManagementRouteTable

  ManagementInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ManagementRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ManagementInternetGateway

  ManagementEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ManagementEC2Instance
      VpcId: !Ref ManagementVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: mgmt-vpc-sg

  ManagementEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId  # Enter the appropriate AMI ID
      InstanceType: t2.micro  # Enter the desired instance type
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - PrivateIpAddress: 10.3.0.10  # Enter the desired private IP address
          SubnetId: !Ref ManagementSubnet
          DeviceIndex: 0
          GroupSet:
            - !Ref ManagementEC2SecurityGroup
      Tags:
        - Key: Name
          Value: mgmt-svr

Outputs:
  AppbEC2InstancePublicIP:
    Value: !GetAtt AppbEC2Instance.PublicIp
    Description: Public IP address of AppbEC2Instance

  AttEC2InstancePublicIP:
    Value: !GetAtt AttEC2Instance.PublicIp
    Description: Public IP address of AttEC2Instance

  ManagementEC2InstancePublicIP:
    Value: !GetAtt ManagementEC2Instance.PublicIp
    Description: Public IP address of ManagementEC2Instance

  GWLBIds:
    Description: Gateway Load Balancer IDs
    Value: !Ref GatewayLoadBalancer
  GWLBEIds:
    Description: Gateway Load Balancer Endpoint IDs
    Value: !Ref GatewayLoadBalancerEndpoint

  PANORAMA_IP_ADDRESS:
    Value: !GetAtt ElasticIp.PublicIp

  NGFWMgmtENI:
    Description: "ID of the VM-Series management interface network interface."
    Value: !Ref NGFWMgmtENI

  NGFWDataENI:
    Description: "ID of the VM-Series data interface network interface."
    Value: !Ref NGFWDataENI

  FirewallInstance:
    Description: "ID of the deployed VM-Series firewall instance."
    Value: !Ref VMInstance

  FirewallPublicIP:
    Description: "Public IP address associated with the VM-Series firewall."
    Value: !GetAtt ElasticIP.PublicIp
